# TraceTools

./: README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/joychic/trace/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/joychic/trace/: App.kt  MainActivity.kt
app/src/main/java/com/joychic/trace/ui/main/: MainFragment.kt  MainViewModel.kt
app/src/main/res/layout/: fragment_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/joychic/trace/: ExampleUnitTest.kt
gradle/: libs.versions.toml  publish.gradle
gradle/wrapper/: gradle-wrapper.properties
trace/: build.gradle  gradle.properties
trace/src/androidTest/java/com/joychic/trace/: ExampleInstrumentedTest.kt
trace/src/main/: AndroidManifest.xml  CMakeLists.txt
trace/src/main/cpp/: ArtMethod.cpp  ArtMethod.h  Trace.cpp  Trace.h  Util.cpp  Util.h  jni_bridge.cpp  log.h
trace/src/main/java/com/joychic/trace/: InitProvider.kt  MTrace.kt  SystemPropertiesUtils.kt  TraceReceiver.kt
